@@ -38,6 +38,7 @@ struct GncExampleAccount_struct
     AccountGroup *group;
     gchar *short_description;
     gchar *long_description;
+    gboolean exclude_from_select_all;
 };
 typedef struct GncExampleAccount_struct GncExampleAccount;
 
